--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,66 @@ body {
 
 }
 
+
+
+.columns {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin: 0 #{$padding * -1} $padding;
+
+    @media(min-width: $mobile_width) {
+        margin-bottom: 0;
+        flex-wrap: nowrap;
+
+        &.columns_wrap {
+            flex-wrap: wrap;
+        }
+    }
+
+
+}
+
+
+
+.column {
+    flex: 1 auto;
+    margin: 0 $padding;
+    width: 100%;
+
+
+    &.column_half {
+        width: auto;
+        max-width: 50%;
+        max-width: calc(50% - #{$padding});
+    }
+
+
+
+    &.column_small {
+        @media(min-width: $mobile_width) {
+            width: #{100% * 1 / 3};
+        }
+
+    }
+
+    &.column_large {
+        @media(min-width: $mobile_width) {
+            width: #{100% * 2 /3 };
+        }
+    }
+
+    &.column_right {
+        @media(min-width: $mobile_width) {
+            text-align: right;
+        }
+    }
+}
+
+// end of column
+
+
 .meta {
     color: $medium_grey;
     font-style: italic;
