add link to google fonts

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -9,6 +9,7 @@ li,
 td,
 th {
     font-size: $font_size;
+    letter-spacing: -0.1px;
 }
 
 
@@ -88,6 +89,7 @@ strong,
 b,
 .font_bold {
     font-weight: bold;
+    letter-spacing: 0.4px;
 }
 
 
