--- a/src/app/messages/message/message.component.html
+++ b/src/app/messages/message/message.component.html
@@ -1,6 +1,6 @@
 <div class="message_container">
     <blockquote [innerHTML]="message.content | fancify"></blockquote>
-    <cite class="meta">posted by <a [routerLink]="['/users', message.user.id]"> {{message.user.username}}</a> at
+    <cite class="meta"><a [routerLink]="['/users', message.user.id]"> {{message.user.username}}</a> at
 
         {{message.created_at | date:'h:mm MMMM d, y'}}
 
