--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -33,7 +33,7 @@ table {
 
     tr {
         &:nth-child(2n) {
-            background-color: $light_grey;
+            background-color: $very_light_grey;
         }
     }
 
