--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -6,6 +6,7 @@
                 <th>Username</th>
                 <th>Email</th>
                 <th>Created</th>
+                <th>Approved</th>
 
             </tr>
         </thead>
@@ -18,6 +19,7 @@
                     </a></td>
                 <td>{{user.email}}</td>
                 <td>{{user.created_at | date:'MMMM d, y'}}</td>
+                <td>{{user.is_approved}}</td>
 
 
             </tr>
