admin can approve users

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -19,7 +19,7 @@
                     </a></td>
                 <td>{{user.email}}</td>
                 <td>{{user.created_at | date:'MMMM d, y'}}</td>
-                <td>{{user.is_approved}}</td>
+                <td> <a (click)="toggleApproval(user)">{{user.is_approved}}</a></td>
 
 
             </tr>
