--- a/src/app/messages/message/message.component.html
+++ b/src/app/messages/message/message.component.html
@@ -1,30 +1,26 @@
-<div class="message_container">
-
+<div class="message_container" #messageContainer>
 
     <div class="columns">
         <div class="column">
-
-
             <blockquote [innerHTML]="message.content | fancify"></blockquote>
-            <cite class="meta"><a [routerLink]="['/users', message.user.id]"> {{message.user.username}}</a> at
-
-                {{message.created_at | date:'h:mm MMMM d, y'}}
-
-                <span *ngIf="current_user.is_an_admin"> | <a (click)="deleteMessage()"> (delete message)</a> </span>
-
-            </cite>
-
         </div>
         <div class="column column_small" *ngIf="message && message.file_url">
             <div class="image_container">
                 <a [href]="message.file_url" target="_blank">
-                    <img [src]="message.file_url" alt="" />
+                    <img *ngIf="file_url" [src]="file_url" alt="Image" />
+                    <app-spinner [show]="!file_url"></app-spinner>
                 </a>
             </div>
 
         </div>
     </div>
-
+    <cite class="meta">
+        <a [routerLink]="['/users', message.user.id]"> {{message.user.username}}</a>
+        at {{message.created_at | date:'h:mm MMMM d, y'}}
+        <span *ngIf="current_user.is_an_admin">
+            <a (click)="deleteMessage()"> (delete message)</a>
+        </span>
+    </cite>
 
 
 </div>
