--- a/src/app/messages/message/message.component.html
+++ b/src/app/messages/message/message.component.html
@@ -1,4 +1,4 @@
-<div class="message_container" #messageContainer>
+<div class="box message_container" #messageContainer>
 
     <div class="columns">
         <div class="column">
@@ -16,9 +16,9 @@
     </div>
     <cite class="meta">
         <a [routerLink]="['/users', message.user.id]"> {{message.user.username}}</a>
-        at {{message.created_at | date:'h:mm MMMM d, y'}}
+        at {{message.created_at | date:'H:mm MMMM d, y'}}
         <span *ngIf="current_user.is_an_admin">
-            <a (click)="deleteMessage()"> (delete message)</a>
+            <a (click)="deleteMessage()" class="delete"> | delete message</a>
         </span>
     </cite>
 
