--- a/src/app/messages/new-message/new-message.component.html
+++ b/src/app/messages/new-message/new-message.component.html
@@ -7,7 +7,7 @@
                 <ul>
 
                     <app-form-field [errors]="errors" [field]="'content'">
-                        <label for="content">Your message * </label>
+                        <label for="content">Add your message * </label>
                         <textarea autocomplete="off" type="text" name="content" id="content"
                             [(ngModel)]="message.content"></textarea>
                     </app-form-field>
