--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -82,6 +82,7 @@ nav {
             display: inline-block;
             padding: 0;
             margin: 0;
+            line-height: 1;
         }
 
 
