--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
 
     <div class="container">
         <nav>
-            <h1> <a [routerLink]="['/']">Chatterbox</a></h1>
+            <h1> <a [routerLink]="['/']">{{site_name}}</a></h1>
             <ul *ngIf="current_user">
 
                 <li *ngIf="current_user.is_an_admin"><a [routerLink]="['/users']"> Users</a></li>
